--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,6 +15,13 @@
 # HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
 
+dynamodb {
+  region = "us-east-1"
+  endpoint = "http://localhost:8000"
+  aws-access-key-id = "dev"
+  aws-secret-access-key = "dev"
+}
+
 ## Akka
 # https://www.playframework.com/documentation/latest/ScalaAkka#Configuration
 # https://www.playframework.com/documentation/latest/JavaAkka#Configuration
