--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,6 +20,8 @@ dynamodb {
   endpoint = "http://localhost:8000"
   aws-access-key-id = "dev"
   aws-secret-access-key = "dev"
+  table-name = "persons"
+  table-name-prefix = "dev"
 }
 
 ## Akka
