Take full control of DynamoDB serialization

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,7 +21,7 @@ dynamodb {
   aws-access-key-id = "dev"
   aws-secret-access-key = "dev"
   table-name = "persons"
-  table-name-prefix = "dev"
+  table-name-prefix = "dev2"
 }
 
 repository-dispatcher {
