Integration test using DynamoDB with the help of LocalDynamoDB and withDatabase

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,12 +16,11 @@
 #mykey = ${JAVA_HOME}
 
 dynamodb {
-  region = "us-east-1"
+  // region = "us-east-1"
   endpoint = "http://localhost:8000"
   aws-access-key-id = "dev"
   aws-secret-access-key = "dev"
-  table-name = "persons"
-  table-name-prefix = "dev"
+  table-name = "testing-persons"
 }
 
 repository-dispatcher {
